# ChangeLog for dev-ruby/activeresource
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/activeresource/ChangeLog,v 1.1 2007/12/18 07:03:34 graaff Exp $

*activeresource-2.0.2 (18 Dec 2007)

  18 Dec 2007; Hans de Graaff <graaff@gentoo.org> +metadata.xml,
  +activeresource-2.0.2.ebuild:
  Initial import for Rails 2.0.2
