@@ -1,4 +1,4 @@
 DIST activeresource-2.0.2.gem 33280 RMD160 b28673c840fa999df0f41b70b704d326fb190a61 SHA1 cd167c95aedc2a155829e5aa419079d780a5ef5f SHA256 ed6c18444e98df0fc4aaa2af89da6bc1db02de926082eabaad7b6aebffe29a62
-EBUILD activeresource-2.0.2.ebuild 548 RMD160 c88df84239d3bcab2e6f1a87ebf62a02a6d766dd SHA1 d11f318a44c9e738db081cbf14a750c23ea4c466 SHA256 e702f8da56cb68885009f37c8db9022c47fd5f105f85d46a16b0da164cc123ae
-MISC ChangeLog 387 RMD160 eea140536913c08e94e5f47aee6823819bab09f9 SHA1 792e0217aae8ec388a630974474fd50b5b02ae40 SHA256 4320a37f25b1a602b4e02c52a81a79c02b5cb3f70738812e4e2612f93ff96464
+EBUILD activeresource-2.0.2.ebuild 566 RMD160 1e1eea481874c869196fe44ed015b000618af8fb SHA1 a643942bb398153b827fa309053defe7da45e786 SHA256 8c0f0bb160e5bae9ad5f2a5d34e9163ab7208ca45b0f5b72b61d37ecd9d18656
+MISC ChangeLog 618 RMD160 2b8638d19ef662d899d4df322f38df9de7f4cbc7 SHA1 b595a8d408f7ea14c61087bae37e574dddd6ad87 SHA256 d36b06fb2c2488170d75c04bd47e9aacc581253ad2266c7c2a11180d754688c4
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
