@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/activeresource/activeresource-2.0.2.ebuild,v 1.1 2007/12/18 07:03:34 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/activeresource/activeresource-2.0.2.ebuild,v 1.2 2008/01/11 02:33:32 nichoj Exp $
 
 EAPI="prefix"
 
@@ -11,8 +11,8 @@ HOMEPAGE="http://rubyforge.org/projects/activeresource/"
 
 LICENSE="MIT"
 SLOT="2"
-KEYWORDS="~amd64 ~ia64 ~ppc-macos ~x86 ~x86-fbsd ~x86-macos ~x86-solaris"
+KEYWORDS="~x86-fbsd ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris"
 IUSE=""
 
 DEPEND=">=dev-lang/ruby-1.8.5
-	=dev-ruby/activesupport-2.0.2"
+	~dev-ruby/activesupport-2.0.2"
